KB-15403 Update publish response message; skip courses that fail validation instead of throwing.